<resources>
    <string name="app_name">IMAD5112 - ASSIGNMENT 2</string>
    <string name="welcome_to_the_history_app">Welcome To The History App</string>
    <string name="test_your_knowlede_of_history_with_this_quiz_app_answer_5_true_false_questions_and_check_your_score">Test Your Knowlede Of History With This Quiz App. Answer 5 True/False Questions And Check Your Score!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="false">False</string>
    <string name="next">Next</string>
    <string name="question">Question</string>
    <string name="true">True</string>
    <string name="exit">Exit</string>
    <string name="review">Review</string>
    <string name="score">Score:</string>
    <string name="retake_quiz">Retake Quiz</string>
    <string name="todo">TODO</string>
    <string name="false">False</string>
    <string name="button1">True</string>
    <string name="button2">False</string>
    <string name="the_history_app">The History App</string>
</resources>