<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE8743"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:lineSpacingExtra="8sp"
        android:padding="16dp"
        android:text="@string/question"
        android:textSize="20sp" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/button1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="104dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/button2"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
