<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE8743"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/score"
        android:textSize="20sp" />

    <Button
        android:id="@+id/review_button"
        android:layout_width="114dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/review"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="114dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
