<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CE8743"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:textAlignment="center">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:paddingBottom="20dp"
        android:text="@string/welcome_to_the_history_app"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="121dp"
        android:paddingBottom="32dp"
        android:text="@string/test_your_knowlede_of_history_with_this_quiz_app_answer_5_true_false_questions_and_check_your_score"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="178dp"
        android:layout_height="84dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:padding="12dp"
        android:text="@string/start_quiz"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="227dp"
        android:contentDescription="@string/todo"
        android:scaleType="center"
        app:srcCompat="@drawable/abc"
        tools:ignore="ImageContrastCheck" />
</LinearLayout>
